bugfix: genre tag spacing

--- a/frontend/src/styles/platform/pages/miru/anime-detail.scss
+++ b/frontend/src/styles/platform/pages/miru/anime-detail.scss
@@ -33,6 +33,7 @@
                         .genre-container {
                             display: flex;
                             flex-wrap: wrap;
+                            gap: .5rem;
                         }
                     }
                 }
